dao unit tests